# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/scripts/: gendiff.py
